--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -12,7 +12,14 @@
         android:src="@drawable/launchsc"/>
 <ProgressBar
     android:id="@+id/progressBar"
-    android:layout_marginTop="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_marginTop="180dp"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    style="?android:attr/progressBarStyleLargeInverse"
+    android:layout_centerInParent="true"
+    android:indeterminateDrawable ="@drawable/custom_progress_bar"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
